# docs/swagger.yaml
@@ -97,6 +97,9 @@ definitions:
         example: "2019-12-23 12:27:37"
         type: string
     type: object
+  model.Address:
+    items: {}
+    type: array
   model.File:
     properties:
       accountId:
@@ -236,6 +239,42 @@ paths:
       - AccessToken: []
       tags:
       - Account
+  /address:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Address'
+      security:
+      - AccessToken: []
+      tags:
+      - Address
+  /address/{first_depth_name}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: region first depth name
+        in: path
+        name: first_depth_name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Address'
+      security:
+      - AccessToken: []
+      tags:
+      - Address
   /files:
     post:
       consumes:
